--- a/Kittens/assets/css/style.css
+++ b/Kittens/assets/css/style.css
@@ -1,9 +1,3 @@
-html,
-body {
-    font-size: 16px;
-}
-
-
 .hero.video {
     position: relative;
 }
@@ -162,6 +156,12 @@ body {
 
     transform-style: preserve-3d;
     transition: transform 0.6s ease-in-out;
+}
+
+
+.detailed-card.flipped .front,
+.detailed-card:not(.flipped) .back {
+    pointer-events: none;
 }
 
 .flipper {
